Some cleanup, dos2unix